--- a/strawberry/html/contenttemplate.html
+++ b/strawberry/html/contenttemplate.html
@@ -1,8 +1,9 @@
 <td>
 <a href='%s'>
-  <div class="content">
+  <div class="card">
+    <img src='%s/preview.jpg' width=320px height=180px alt="[Image Preview of '%s']"><br>
     %s<br>
-    <img src='%s/preview.jpg' width=160px height=90px alt="[Image Preview of '%s']">
+    <p>%s</p>
   </div>
 </a>
 </td>
